// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sould require dirA files 1`] = `
"const foo = function () {
  const map = {
    'hello.js': require('fixtures/dirA/hello.js')
  };

  const returnContext = function (item) {
    return map[item];
  };

  returnContext.keys = function () {
    return Object.keys(map);
  };

  return returnContext;
}();"
`;

exports[`sould require root project dirs 1`] = `
"const foo = function () {
  const map = {
    'dirA': require('fixtures/dirA'),
    'testA.js': require('fixtures/testA.js'),
    'testB.js': require('fixtures/testB.js')
  };

  const returnContext = function (item) {
    return map[item];
  };

  returnContext.keys = function () {
    return Object.keys(map);
  };

  return returnContext;
}();"
`;
